; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regcmds.c_error_unknown_switch.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regcmds.c_error_unknown_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"Undefined switch /%c!\0A\00", align 1
@.str.1 = private unnamed_addr constant [69 x i8] c"Alphabetic character is expected after '%c' in switch specification\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @error_unknown_switch(i8 signext %0, i8* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8*, align 8
  store i8 %0, i8* %3, align 1
  store i8* %1, i8** %4, align 8
  %5 = load i8, i8* %3, align 1
  %6 = call i64 @isalpha(i8 signext %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i8, i8* %3, align 1
  %10 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8 signext %9)
  br label %16

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 -1
  %14 = load i8, i8* %13, align 1
  %15 = call i32 @printf(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str.1, i64 0, i64 0), i8 signext %14)
  br label %16

16:                                               ; preds = %11, %8
  ret void
}

declare dso_local i64 @isalpha(i8 signext) #1

declare dso_local i32 @printf(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
